# mnist-app

./: README.md
python-web-app/: README.md  index.html  main.py  pyproject.toml
python-web-app/static/: main.js
train/: model.onnx  predict.py  pyproject.toml  show_data.py  train.py
