[tool.poetry]
name = "python-web-app"
version = "0.1.0"
description = ""
authors = ["121786addzczd <72346611+121786addzczd@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9.13"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
