[tool.poetry]
name = "train"
version = "0.1.0"
description = ""
authors = ["121786addzczd <72346611+121786addzczd@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9.13"
scikit-learn = "1.1.2"
skl2onnx = "1.15"
packaging = "21.3"
Pillow = "9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
